Implementadas sugestões de código da avaliação de código pelo SonarQube Cloud